[gd_scene load_steps=3 format=3 uid="uid://ckqg6qgs6grgd"]

[ext_resource type="Script" uid="uid://dksxk1y3frgek" path="res://Scene/User Interfaces/UI Scripts/button_manager_settings.gd" id="1_5gvj4"]
[ext_resource type="Script" uid="uid://h5eph3mecfu1" path="res://Scene/User Interfaces/UI scenes/Settings.gd" id="1_vpxuq"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_vpxuq")

[node name="Button Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5gvj4")

[node name="Back" type="Button" parent="Button Manager"]
layout_mode = 0
offset_left = 37.0
offset_top = 26.0
offset_right = 182.0
offset_bottom = 88.0
text = "Back
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 387.0
offset_right = 163.0
offset_bottom = 507.0

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="CheatInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Code"

[node name="RedeemButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
text = "Redeem"

[connection signal="pressed" from="Button Manager/Back" to="Button Manager" method="_on_back_pressed"]
